Polishing the task

--- a/wydentask/src/main/resources/application.properties
+++ b/wydentask/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 price.margin.percent=0.00075
+streams.limit=20
+event.cooldown.ms=2000
+
+micronaut.server.cors.enabled=true
+micronaut.server.port=59000
+micronaut.http.client.read-timeout=30s
+micronaut.http.client.read-idle-timeout=30s
