--- a/wydentask/pom.xml
+++ b/wydentask/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>wydentask</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,6 +19,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -54,8 +55,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.11</version>
-            <scope>test</scope>
+            <version>1.4.8</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
@@ -68,8 +68,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>1.18.28</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -81,14 +81,27 @@
 
         <dependency>
             <groupId>io.micronaut</groupId>
-            <artifactId>micronaut-http</artifactId>
-            <version>3.7.4</version>
+            <artifactId>micronaut-runtime</artifactId>
+            <version>3.9.2</version>
         </dependency>
 
         <dependency>
             <groupId>io.micronaut</groupId>
-            <artifactId>micronaut-runtime</artifactId>
-            <version>3.7.4</version>
+            <artifactId>micronaut-http-server-netty</artifactId>
+            <version>3.9.2</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-management</artifactId>
+            <version>3.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-http-client</artifactId>
+            <version>3.9.2</version>
         </dependency>
 
         <dependency>
@@ -99,17 +112,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.4.8</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
             <groupId>io.micronaut</groupId>
-            <artifactId>micronaut-discovery-client</artifactId>
-            <version>2.0.1</version>
-            <scope>runtime</scope>
+            <artifactId>micronaut-inject-java</artifactId>
+            <version>3.9.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
